--- a/frog-agriculture-server/frog-admin/src/main/resources/application.yml
+++ b/frog-agriculture-server/frog-admin/src/main/resources/application.yml
@@ -9,7 +9,7 @@ ruoyi:
   # 实例演示开关
   demoEnabled: true
   # 文件路径，以uploadPath结尾 示例（ Windows配置 D:/uploadPath，Linux配置 /uploadPath, Mac /Users/xxx）
-  profile: /Users/junqiao/projectCode/uploadPath
+  profile: C:\Users\Administrator\Desktop\file
   # 获取ip地址开关
   addressEnabled: true
   # 验证码类型 math 数组计算 char 字符验证
@@ -51,9 +51,9 @@ spring:
     druid:
       # 主库数据源
       master:
-        url: jdbc:mysql://localhost:3306/frog_agriculture_os?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+        url: jdbc:mysql://localhost:3306/frog_agriculture?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
         username: root
-        password: frog
+        password: root
       # 从库数据源
       slave:
         # 从数据源开关/默认关闭
@@ -69,7 +69,7 @@ spring:
         driverClassName: com.taosdata.jdbc.TSDBDriver
         url: jdbc:TAOS://localhost:6030/frog_agriculture_log?timezone=Asia/Beijing&charset=utf-8
         username: root
-        password: taosdata
+        password: root
         dbName: frog
 
       # 初始连接数
@@ -132,7 +132,7 @@ spring:
     # 数据库索引
     database: 0
     # 密码
-    password: frog
+    password:
     # 连接超时时间
     timeout: 10s
     lettuce:
@@ -147,8 +147,8 @@ spring:
         max-wait: -1ms
   # mqtt 配置
   mqtt:
-    username: frog                      # 账号
-    password: frog                      # 密码
+    username: admin                      # 账号
+    password: 71829304q                      # 密码
     host-url: tcp://localhost:1883            # mqtt连接tcp地址
     client-id: ${random.int}                   # 客户端Id，不能相同，采用随机数 ${random.value}
     default-topic: test                        # 默认主题
